perfect scrollbar css fix. Sorting by date order

--- a/app/javascript/stylesheets/scrollbar.css
+++ b/app/javascript/stylesheets/scrollbar.css
@@ -31,7 +31,7 @@
   -webkit-transition: background-color .2s linear, opacity .2s linear;
   width: 15px;
   /* there must be 'right' or 'left' for ps__rail-y */
-  right: 0;
+  left: 0;
   /* please don't change 'position' */
   position: absolute;
 }
